<?xml version="1.0"?>
<package format="3">
  <name>amr_description</name>
  <version>0.0.1</version>
  <description>AMR URDF and launch</description>
  <maintainer email="rudy@example.com">rudy</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
