<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zlac8015d_serial</name>
  <version>0.0.1</version>
  <description>ROS2 package for RS485 communication with ZLAC8015D driver</description>
  <maintainer email="oxcarxierra@gmail.com">Seung Seok Oh</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>serial</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msg</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>joy_control</exec_depend>
  <exec_depend>keyboard_joy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
